--- a/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/welcomeStage.fxml
+++ b/Object-Orentation/LibreriaOnline/LibreriaOnlineJava/src/main/resources/com/example/bibliotecadigitale/welcomeStage.fxml
@@ -13,94 +13,77 @@
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bibliotecadigitale.Controller.WelcomeController">
-   <HBox fillHeight="false" maxHeight="500.0" maxWidth="500.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0"
-         prefWidth="500.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
-      <AnchorPane maxHeight="500.0" maxWidth="200.0" minHeight="500.0" minWidth="200.0" prefHeight="500.0"
-                  prefWidth="200.0" style="-fx-border-color: #964B00;">
-         <ImageView fx:id="imageWelcome" fitHeight="495.0" fitWidth="200.0" layoutX="2.0" layoutY="2.0"
-                    pickOnBounds="true" preserveRatio="true">
+   <HBox fillHeight="false" maxHeight="500.0" maxWidth="500.0" minHeight="500.0" minWidth="500.0" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+      <AnchorPane maxHeight="500.0" maxWidth="200.0" minHeight="500.0" minWidth="200.0" prefHeight="500.0" prefWidth="200.0" style="-fx-border-color: #964B00;">
+         <ImageView fx:id="imageWelcome" fitHeight="495.0" fitWidth="200.0" layoutX="2.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
          </ImageView>
       </AnchorPane>
-      <AnchorPane maxHeight="500.0" maxWidth="300.0" minHeight="500.0" minWidth="300.0" prefHeight="500.0"
-                  prefWidth="300.0" style="-fx-border-color: #964B00;">
-         <ImageView fx:id="imageWelcome2" fitHeight="498.0" fitWidth="298.0" layoutY="2.0" pickOnBounds="true"
-                    preserveRatio="true">
+      <AnchorPane maxHeight="500.0" maxWidth="300.0" minHeight="500.0" minWidth="300.0" prefHeight="500.0" prefWidth="300.0" style="-fx-border-color: #964B00;">
+         <ImageView fx:id="imageWelcome2" fitHeight="498.0" fitWidth="298.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
 
          </ImageView>
-         <StackPane layoutX="16.0" layoutY="40.0" prefHeight="419.0" prefWidth="267.0"
-                    style="-fx-background-color: #fdf3ea; -fx-border-color: #de5f4f; -fx-border-radius: 0; -fx-border-width: 4;"/>
+         <StackPane layoutX="16.0" layoutY="40.0" prefHeight="419.0" prefWidth="267.0" style="-fx-background-color: #fdf3ea; -fx-border-color: #de5f4f; -fx-border-radius: 0; -fx-border-width: 4;" />
          <Text fill="#2b2d30" layoutX="24.0" layoutY="151.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email">
             <font>
-               <Font name="Arial" size="20.0"/>
+               <Font name="Arial" size="20.0" />
             </font>
          </Text>
          <Text fill="#2b2d30" layoutX="24.0" layoutY="194.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password">
             <font>
-               <Font name="Arial" size="20.0"/>
+               <Font name="Arial" size="20.0" />
             </font>
          </Text>
          <ButtonBar layoutX="39.0" layoutY="241.0" prefHeight="40.0" prefWidth="200.0">
             <buttons>
-               <Button fx:id="ButtonLoginIn" defaultButton="true" mnemonicParsing="false" onAction="#LogIn"
-                       prefHeight="25.0" prefWidth="183.0" style="-fx-background-color: #2B2D30;" text="Log In"
-                       textFill="WHITE">
+               <Button fx:id="ButtonLoginIn" defaultButton="true" mnemonicParsing="false" onAction="#LogIn" prefHeight="25.0" prefWidth="183.0" style="-fx-background-color: #2B2D30;" text="Log In" textFill="WHITE">
                   <font>
-                     <Font name="Arial" size="15.0"/>
+                     <Font name="Arial" size="15.0" />
                   </font>
                </Button>
             </buttons>
          </ButtonBar>
-         <TextField fx:id="txtEmailField" layoutX="128.0" layoutY="131.0" promptText="Email"/>
-         <Text fill="#2b2d30" layoutX="32.0" layoutY="341.0" strokeType="OUTSIDE" strokeWidth="0.0"
-               text="Non sei un Utente ?">
+         <TextField fx:id="txtEmailField" layoutX="128.0" layoutY="131.0" promptText="Email" />
+         <Text fill="#2b2d30" layoutX="32.0" layoutY="341.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Non sei un Utente ?">
             <font>
-               <Font name="Arial" size="20.0"/>
+               <Font name="Arial" size="20.0" />
             </font>
          </Text>
-         <Button fx:id="ButtonSingUp" defaultButton="true" layoutX="210.0" layoutY="321.0" mnemonicParsing="false"
-                 onAction="#goToSingUpUtente" style="-fx-background-color: transparent; -fx-cursor: hand;"
-                 text="Sign Up" textFill="#de5f4f" underline="true">
+         <Button fx:id="ButtonSingUp" defaultButton="true" layoutX="210.0" layoutY="321.0" mnemonicParsing="false" onAction="#goToSingUpUtente" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Sign Up" textFill="#de5f4f" underline="true">
             <font>
-               <Font size="14.0"/>
+               <Font size="14.0" />
             </font>
          </Button>
-         <PasswordField fx:id="txtPasswordField" layoutX="128.0" layoutY="173.0" promptText="Password"/>
-         <Text layoutX="38.0" layoutY="430.0" opacity="0.7" strokeType="OUTSIDE" strokeWidth="0.0"
-               text="Numero di utenti registrati">
+         <PasswordField fx:id="txtPasswordField" layoutX="128.0" layoutY="173.0" promptText="Password" />
+         <Text layoutX="38.0" layoutY="430.0" opacity="0.7" strokeType="OUTSIDE" strokeWidth="0.0" text="Numero di utenti registrati">
             <font>
-               <Font name="Arial" size="15.0"/>
+               <Font name="Arial" size="15.0" />
             </font>
          </Text>
-         <Text layoutX="38.0" layoutY="450.0" opacity="0.7" strokeType="OUTSIDE" strokeWidth="0.0"
-               text="Numero di utenti Online">
+         <Text layoutX="38.0" layoutY="450.0" opacity="0.7" strokeType="OUTSIDE" strokeWidth="0.0" text="Numero di utenti Online">
             <font>
-               <Font name="Arial" size="15.0"/>
+               <Font name="Arial" size="15.0" />
             </font>
          </Text>
-         <Text fx:id="txtUserRegistrati" layoutX="224.0" layoutY="430.0" opacity="0.7" strokeType="OUTSIDE"
-               strokeWidth="0.0" text="99">
+         <Text fx:id="txtUserRegistrati" layoutX="224.0" layoutY="430.0" opacity="0.7" strokeType="OUTSIDE" strokeWidth="0.0" text="99">
             <font>
-               <Font name="Arial" size="15.0"/>
+               <Font name="Arial" size="15.0" />
             </font>
          </Text>
-         <Text fx:id="txtUserOnline" layoutX="224.0" layoutY="450.0" opacity="0.7" strokeType="OUTSIDE"
-               strokeWidth="0.0" text="99">
+         <Text fx:id="txtUserOnline" layoutX="224.0" layoutY="450.0" opacity="0.7" strokeType="OUTSIDE" strokeWidth="0.0" text="99">
             <font>
-               <Font name="Arial" size="15.0"/>
+               <Font name="Arial" size="15.0" />
             </font>
             <effect>
-               <Glow level="0.0"/>
+               <Glow level="0.0" />
             </effect>
          </Text>
-         <Text fill="#de5f4f" layoutX="61.0" layoutY="73.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0"
-               text="Accedi o Registrati!" wrappingWidth="176.77734375">
+         <Text fill="#de5f4f" layoutX="61.0" layoutY="73.0" stroke="BLACK" strokeType="OUTSIDE" strokeWidth="0.0" text="Accedi o Registrati!" wrappingWidth="176.77734375">
             <font>
-               <Font name="Arial" size="20.0"/>
+               <Font name="Arial" size="20.0" />
             </font>
          </Text>
-         <Button layoutX="20.0" layoutY="459.0" mnemonicParsing="false" onAction="#skip" text="Skip"/>
-         <PasswordField fx:id="txtPasswordFieldAdmin" layoutX="84.0" layoutY="459.0" promptText="Password Admin"/>
-         <Button layoutX="234.0" layoutY="459.0" mnemonicParsing="false" onAction="#goToAdmin" text="Enter"/>
+         <PasswordField fx:id="txtPasswordFieldAdmin" layoutX="84.0" layoutY="459.0" promptText="Password Admin" />
+         <Button layoutX="234.0" layoutY="459.0" mnemonicParsing="false" onAction="#goToAdmin" text="Enter" />
       </AnchorPane>
    </HBox>
 </AnchorPane>
